XMLtoCSV/objects/unpackaged/objects/Index_vod__c.object
<CustomObject>
    <description>KOL Indexes</description>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Indexes</relationshipLabel>
        <relationshipName>Indexes_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Average_vod__c</fullName>
        <description>Average Value</description>
        <label>Average</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id_vod__c</fullName>
        <description>External Id</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lower_Limit_vod__c</fullName>
        <description>Lower limit of Index Range</description>
        <label>Lower Limit</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name_vod__c</fullName>
        <label>Record Type Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_vod__c</fullName>
        <description>Name of Index</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Researcher_Index_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical_Investigator_Index_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert_Advisor_Index_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory_Advisor_Index_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budgetary_Advisor_Index_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guideline_Expert_Index_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disease_Advocate_Index_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overall_Index_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publication_Activity_Index_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical_Trial_Activity_Index_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical_Events_Activity_Index_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connections_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Upper_Limit_vod__c</fullName>
        <description>Upper limit of Index Range</description>
        <label>Upper Limit</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_vod__c</fullName>
        <description>Value of Index</description>
        <label>Value</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Index</label>
    <nameField>
        <displayFormat>I-{00000}</displayFormat>
        <label>Index Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Indexes</pluralLabel>
    <recordTypes>
        <fullName>KOL_Activity_Index_vod</fullName>
        <active>true</active>
        <description>Used for all KOL Activity related index values</description>
        <label>KOL_Activity_Index_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>KOL_Scientific_Index_vod</fullName>
        <active>true</active>
        <description>Used for all KOL Scientific expertise related index values</description>
        <label>KOL_Scientific_Index_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>